fixed spacing issues with nested ul/li elements

--- a/css/style.css
+++ b/css/style.css
@@ -798,8 +798,30 @@ div#callout {
 	height: 100%;
 }
 
+#floor .floor-area .widget_nav_menu ul ul li > ul li:after {
+	content: ">";
+	border: 1px solid #666;
+	background: #333;
+	color: #333;
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	border-radius: 10px;
+	-moz-box-shadow: 1px 0px 1px #000;
+	-webkit-box-shadow: 1px 0px 1px #000;
+	box-shadow: 1px 0px 1px #000; 
+	position: relative;
+	float: left; 
+	display: block;
+	left: 14px;
+	top: -28px;
+	margin-bottom: -28px;
+	min-height: 24px;
+	height: 100%;
+}
+
 #floor .floor-area .widget_nav_menu ul ul li > ul li:before {
-	width: 1.5em;
+/*	width: 1.5em; */
+	margin-right: 20px;
 }
 
 #floor .floor-area .widget_nav_menu ul a {
